...
        <TextView
            android:id="@+id/textView_add_profile_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Click to Add Image.\nYour previous Picture is not Saved!"
            android:layout_below="@id/profile_pic_button"
            android:textAlignment="center"
            android:layout_marginBottom="50dp" />

        <ImageButton
            android:id="@+id/profile_pic_button"
            android:layout_centerHorizontal="true"
...
            android:padding="6dp"
            android:textColor="#555555"
            android:textSize="20dp"
            android:layout_marginTop="40dp" />

        <EditText
            android:id="@+id/editText_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First and Last Name"
            android:inputType="textPersonName"
            android:textSize="16dp"
            android:padding="6dp"
...
            android:text="Your Email*"
            android:textColor="#555555"
            android:textSize="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editText_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="e.g. johndoe@gmail.com"
            android:textSize="16dp"
            android:padding="6dp"
...
            android:text="Homepage*"
            android:textColor="#555555"
            android:textSize="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editText_homepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            android:hint="www.yourwebsite.com"
            android:textSize="16dp"
            android:padding="6dp"
...
            android:text="Mobile*"
            android:textColor="#555555"
            android:textSize="20dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editText_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:hint="xxx-xxx-xxxx"
            android:textSize="16dp"
            android:padding="6dp"
            android:layout_below="@id/textView_mobile"
            android:background="@drawable/border"/>


        <Button
            android:id="@+id/button_register"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_mobile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FFAE42"
            android:text="Done"
            android:textColor="@color/black"
            app:cornerRadius="20dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
...
