...
                android:layout_gravity="center"
                android:src="@drawable/ic_default_profile_icon"
                app:civ_border_width="5dp"
                app:civ_border_color="@color/amber"/>

            <TextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="40dp"
                android:hint="Name"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="8dp"
                android:hint="Email"
                android:padding="8dp"
...
