...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageButton
            android:id="@+id/goback"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
...
                android:elevation="8dp"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_location" />

            <ImageButton
                android:id="@+id/btnSignUp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/circle"
                android:contentDescription="sign up"
...
